--- a/package.json
+++ b/package.json
@@ -310,6 +310,7 @@
     "node-gyp": "^11.0.0",
     "openapi-typescript": "^7.5.2",
     "p-map": "^7.0.3",
+    "patch-package": "^8.0.0",
     "prettier": "^3.4.2",
     "remark-cli": "^12.0.1",
     "remark-frontmatter": "^5.0.0",
