--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "brotli-wasm": "^3.0.1",
     "chroma-js": "^3.1.2",
     "countries-and-timezones": "^3.7.2",
+    "critters": "^0.0.23",
     "dayjs": "^1.11.13",
     "debug": "^4.4.0",
     "dexie": "^3.2.7",
