--- a/package.json
+++ b/package.json
@@ -141,10 +141,10 @@
     "@serwist/next": "^9.0.11",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.62.16",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@trpc/client": "^11.0.2",
+    "@trpc/next": "^11.0.2",
+    "@trpc/react-query": "^11.0.2",
+    "@trpc/server": "^11.0.2",
     "@vercel/analytics": "^1.4.1",
     "@vercel/edge-config": "^1.4.0",
     "@vercel/functions": "^2",
